--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -88,6 +88,13 @@ button:active,
 input[type="submit"]:active {
     background: #6f5ece;
 }
+a.btn.disabled,
+button.disabled,
+input[type="submit"].disabled {
+    opacity: 0.7;
+    pointer-events: none;
+    user-select: none;
+}
 
 /*
  * LAYOUT
@@ -230,6 +237,30 @@ input[type="submit"]:active {
 .section.features .feature-blocks .block p {
     margin-bottom: 10px;
 }
+
+/* lockdrop info */
+.section.lockdrop {
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 120px;
+    max-width: 520px;
+}
+.section.lockdrop h2 {
+    font-weight: 700;
+    font-style: italic;
+    text-align: center;
+    text-transform: uppercase;
+    color: rgba(255,255,255,0.6);
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+.section.lockdrop center {
+    margin-top: 30px;
+}
+.section.lockdrop .btn-additional-text {
+    margin-left: 10px;
+}
+
 
 /* faq */
 .section.faq {
