--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -23,7 +23,11 @@ h1, h2, h3, h4 {
 }
 h2 {
     font-size: 24px;
-    font-weight: 500;
+    font-weight: 700;
+    font-style: italic;
+    text-transform: uppercase;
+    color: rgba(255,255,255,0.6);
+    letter-spacing: 0.3px;
 }
 hr {
     border-top: none;
@@ -38,7 +42,7 @@ a {
     text-decoration: none;
 }
 a:hover {
-    text-decoration: underline;
+    color: #96fcbf;
 }
 .button-text {
     display: inline-block;
@@ -201,10 +205,8 @@ input[type="submit"].disabled {
     margin: 26px 0;
 }
 .section.lead h2 {
-    font-weight: 700;
-    font-style: italic;
-    text-transform: uppercase;
     text-align: left;
+    color: #fff;
 }
 
 /* features */
@@ -213,11 +215,7 @@ input[type="submit"].disabled {
     margin-bottom: 90px;
 }
 .section.features h2 {
-    font-weight: 700;
-    font-style: italic;
     text-align: center;
-    text-transform: uppercase;
-    color: rgba(255,255,255,0.6);
     margin-top: 70px;
     margin-bottom: 60px;
 }
@@ -246,11 +244,7 @@ input[type="submit"].disabled {
     max-width: 520px;
 }
 .section.lockdrop h2 {
-    font-weight: 700;
-    font-style: italic;
     text-align: center;
-    text-transform: uppercase;
-    color: rgba(255,255,255,0.6);
     margin-top: 70px;
     margin-bottom: 30px;
 }
@@ -278,11 +272,7 @@ input[type="submit"].disabled {
 }
 .section.faq h2,
 .section.cta h2 {
-    font-weight: 700;
-    font-style: italic;
     text-align: center;
-    text-transform: uppercase;
-    color: rgba(255,255,255,0.6);
     margin-top: 70px;
     margin-bottom: 80px;
 }
@@ -322,16 +312,15 @@ input[type="submit"].disabled {
 
 /* footer */
 .footer {
-    background: #222;
+    border-top: 1px solid rgba(140,140,140,0.2);
     padding: 40px 0;
-    color: #ddd;
+    color: #888888;
     font-size: 0.9em;
 }
 .footer-links {
     float: left;
 }
 .footer-links a {
-    color: #ddd;
     text-decoration: none;
     margin: 0 2px;
 }
@@ -434,5 +423,10 @@ input[type="submit"].disabled {
     .footer .footer-links {
         font-size: 16px;
         margin-bottom: 10px;
+    }
+    .footer .footer-copyright {
+        float: none;
+        text-align: center;
+        font-size: 16px;
     }
 }
